// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic 1`] = `
<DocumentFragment>
  <div
    data-testid="location-display"
  >
    http://localhost:3000/login
  </div>
  <h1
    data-testid="login"
  >
    You are at the login page
  </h1>
</DocumentFragment>
`;

exports[`default route + wildcard routes + nested 1`] = `
<DocumentFragment>
  <div
    data-testid="location-display"
  >
    http://localhost:3000/users/blah/test1
  </div>
  <h1
    data-testid="users"
  >
    You are user test1
  </h1>
</DocumentFragment>
`;

exports[`wildcard routes + nested 1`] = `
<DocumentFragment>
  <div
    data-testid="location-display"
  >
    http://localhost:3000/users/blah/test1
  </div>
  <h1>
    inside userRoot
  </h1>
  <h1
    data-testid="users"
  >
    You are user test1
  </h1>
</DocumentFragment>
`;
